[package]
name = "taskhelper"
description = "Alternative frontend for taskwarrior"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/taskhelper"
repository = "https://github.com/adam-gaia/taskhelper"

[dependencies]
color-eyre = "0.6.3"
env_logger = "0.11.3"
log = "0.4.22"
directories = "5.0.1"
serde = { version = "1.0.210", features = ["derive"] }
which = "6.0.3"
thiserror = "1.0.64"
nix = { version = "0.29.0", features = ["fs", "process", "term"] }
libc = "0.2.159"
async-stream = "0.3.5"
tokio-stream = { version = "0.1.16", features = ["io-util"] }
tokio-fd = "0.3.0"
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
async-trait = "0.1.83"
fern = "0.6.2"
terminal_size = "0.4.0"
clap = { version = "4.5.19", features = ["derive"] }
winnow = "0.6.20"
s-string = "1.0.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
